fixed top padding to fix large whitespace below navbar

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -84,7 +84,7 @@ body:after {
 
 #root-content > div:not(#root) {
   background-color: #F9F9FB;
-  padding-top: $footer-height;
+//  padding-top: $footer-height;
   margin-bottom: $footer-height+10px;
 }
 
